# typesetting

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bindings/jni/: TypesettingJNI.cpp  TypesettingJNI.h
bindings/swift/: TypesettingBridge.h  TypesettingBridge.mm
include/typesetting/: css.h  document.h  engine.h  interaction.h  layout.h  log.h  page.h  platform.h  style.h  style_resolver.h
src/: css.cpp  document.cpp  engine.cpp  interaction.cpp  layout.cpp  linebreaker.cpp  page.cpp  style.cpp  style_resolver.cpp
tests/: CMakeLists.txt  test_css.cpp  test_layout.cpp  test_se_integration.cpp  test_style_resolver.cpp
tests/testdata/emma/: chapter-1.xhtml  chapter-26.xhtml  dedication.xhtml  local.css
tests/testdata/farewell/: chapter-1.xhtml  dedication.xhtml  local.css
tests/testdata/huckfinn/: chapter-1.xhtml  chapter-17.xhtml  chapter-20.xhtml  local.css
tests/testdata/pride/: chapter-1.xhtml  chapter-21.xhtml  chapter-27.xhtml  local.css
tests/testdata/sun/: book-1.xhtml  chapter-19.xhtml  dedication.xhtml  epigraph.xhtml  local.css
